--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -12,7 +12,6 @@
 </section>
 <div class="container">
   <div class="form">
-    <!-- <div class="right"> -->
       <div class="image">
         <img src="medias/auth-img.png" alt="">
        <h1>Get started</h1>
@@ -43,24 +42,62 @@
         <p> Dont have an acount? <a href="">sign up</a></p>
         </div>
         
-        <!-- </div>
-        <div class="left">
-          <img src="medias/auth-img.png" alt="">
-  
-      </div>
-   -->
       </form>
     </div>
      
 </div>
     </div>
     </div> 
-    <!-- <div class="left">
-        <img src="medias/auth-img.png" alt="">
-
-    </div> -->
 
   </div>
 </body>
 </html>
+ -->
 
+ <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Login</title>
+    <link rel="stylesheet" href="">
+</head>
+<body>
+
+    <div class="container">
+        <form id="loginForm">
+            <h1>Get started!</h1>
+            <p>Enter your credentials to access your acount</p>
+            <div class="input-group">
+              <label for="name">Name</label>
+              <input type="nom" id="name" placeholder="Your name">
+                <label for="email">Email:</label>
+                <input type="email" id="email" placeholder="votre email" required>
+                <div>
+
+                  <div class="motdepass">
+                    <label for="password">Password:</label>
+                 <a href="">forget password</a>
+                  </div>
+                    <input type="password" id="password" placeholder="votre mot de passe">
+                    <div>
+                      <div class="checkbox">
+                        <input type="checkbox" name=""> i agree to the <a href="">terms & policy</a>
+                      </div>
+            </div>
+            </div>
+            </div>
+            <button type="submit">Login</button>
+
+                <span>Or</span>
+            <div class="svg"> <button><img src="medias/google.svg" alt="google">Sign up in with google</button>
+            <button><img src="medias/apple.svg" alt="apple">Sign up in with apple</button></div>
+            <p>Have an acount? <a href="connexion.html">Sign up</a></p>
+        </form>
+        <div class="image-container">
+            <img src="medias/auth-img.png" alt="Login Image">
+        </div>
+    </div>
+</body>
+</html>
